synmax work for cw direction, ccw has problem

--- a/BLACK/SRC/debug/waveform.ini
+++ b/BLACK/SRC/debug/waveform.ini
@@ -5,7 +5,7 @@ FUNC void wavevalue(void)
 	exec("log > MyValues.log");
 	for (tmp=0;tmp<400;tmp++)
 		{
-		printf("Ac[%02u] =%02u\n",tmp, Ac[tmp]);
+		printf("test[%02u] =%02u\n",tmp, test[tmp]);
 		}
 	exec("log off");
 	
